WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307038
RTCIceCandidate.toJSON() doesn't serialize usernameFragment
https://bugs.webkit.org/show_bug.cgi?id=307038
Summary
RTCIceCandidate.toJSON() doesn't serialize usernameFragment
Ahmad Saleem
Reported
2026-02-04 21:13:46 PST
ssia - we are failing toJSON.html webrtc test because of this, so this is to fix the bug.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-04 21:13:52 PST
<
rdar://problem/169679947
>
Ahmad Saleem
Comment 2
2026-02-04 21:16:45 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57927
EWS
Comment 3
2026-02-05 01:24:19 PST
Committed
306845@main
(a57d4c42da1c): <
https://commits.webkit.org/306845@main
> Reviewed commits have been landed. Closing PR #57927 and removing active labels.
EWS
Comment 4
2026-03-16 18:26:59 PDT
Committed
305413.497@safari-7624-branch
(2007a22e6969): <
https://commits.webkit.org/305413.497@safari-7624-branch
> Reviewed commits have been landed. Closing PR #4726 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug