Cherry-pick a57d4c42da1c. rdar://172689343

RTCIceCandidate.toJSON() doesn't serialize usernameFragment
    https://bugs.webkit.org/show_bug.cgi?id=307038
    rdar://169679947

    Reviewed by Philippe Normand.

    This patch aligns WebKit with Gecko / Firefox and Blink / Chromium.

    The toJSON() method was missing the usernameFragment field in its serialization,
    this patch adds it to progress failing test case.

    * Source/WebCore/Modules/mediastream/RTCIceCandidate.cpp:
    (WebCore::RTCIceCandidate::toJSON const):
    * LayoutTests/imported/w3c/web-platform-tests/webrtc/toJSON-expected.txt: Progression

    Canonical link: https://commits.webkit.org/306845@main

Identifier: 305413.497@safari-7624-branch